@@ -8,6 +8,7 @@ package org.opensearch.knn.index.mapper;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.opensearch.core.common.Strings;
+import org.opensearch.knn.index.engine.KNNEngine;
 import org.opensearch.knn.index.query.rescore.RescoreContext;
 
 import java.util.Collections;
@@ -24,7 +25,7 @@ public enum CompressionLevel {
     NOT_CONFIGURED(-1, "", null, Collections.emptySet()),
     x1(1, "1x", null, Collections.emptySet()),
     x2(2, "2x", null, Collections.emptySet()),
-    x4(4, "4x", null, Collections.emptySet()),
+    x4(4, "4x", new RescoreContext(2.0f, false, true), Set.of(Mode.ON_DISK)),
     x8(8, "8x", new RescoreContext(2.0f, false, true), Set.of(Mode.ON_DISK)),
     x16(16, "16x", new RescoreContext(3.0f, false, true), Set.of(Mode.ON_DISK)),
     x32(32, "32x", new RescoreContext(3.0f, false, true), Set.of(Mode.ON_DISK)),
@@ -101,12 +102,14 @@ public enum CompressionLevel {
      *
      * @param mode      The {@link Mode} for which to retrieve the {@link RescoreContext}.
      * @param dimension The dimensional value that determines the {@link RescoreContext} behavior.
+     * @param knnEngine KNNEngine
      * @return          A {@link RescoreContext} with an oversample factor of 5.0f if {@code dimension} is less than
      *                  or equal to 1000, the default {@link RescoreContext} if greater, or {@code null} if the mode
      *                  is invalid.
      */
-    public RescoreContext getDefaultRescoreContext(Mode mode, int dimension) {
-        if (modesForRescore.contains(mode)) {
+    public RescoreContext getDefaultRescoreContext(Mode mode, int dimension, KNNEngine knnEngine) {
+        if ((modesForRescore.contains(mode) && knnEngine != KNNEngine.LUCENE)
+            || (compressionLevel == CompressionLevel.x4.compressionLevel && knnEngine == KNNEngine.FAISS)) {
             // Adjust RescoreContext based on dimension
             if (dimension <= RescoreContext.DIMENSION_THRESHOLD) {
                 // For dimensions <= 1000, return a RescoreContext with 5.0f oversample factor
